# climate_econometrics_toolkit

./: .gitattributes  README.md  climate_econometrics_api.py  pyproject.toml  tkinter_demo.py
data/: GDP_climate_test_data.csv  GrowthClimateDataset.csv  harveststat_maize_regression_data.csv  regression_dataset.csv  tfp_regression_data.csv
docs/: api_quickstart.md  guide_for_new_users.md  interface_quickstart.md  quickstart.md
example_cmaps/: example_cmap_1.cxl  example_cmap_2.cxl  example_cmap_3.cxl  example_cmap_4.cxl  example_cmap_5.cxl
notebooks/: drought_paper_reproduction.ipynb  ortiz-bobea-reproduction.ipynb  perf_eval.ipynb
preprocessing/: compute_gridded_degree_days.R  compute_gridded_dewpoint_temperature.R  compute_gridded_temperature_humidity_index.R  compute_gridded_temperature_humidity_index_terra.R  convert_daily_temp_max_min_data.py  convert_dewpoint_temperature_data.py  convert_monthly_temp_data.py  convert_ndvi_data.py  convert_spei_data.py  convert_temperature_humidity_index_data.py  make_gcm_data.py  process_climate_data_by_admin_region.R  process_gridded_gcm_data.py  process_ndvi_data.R  process_raster_data_by_country.R  process_raster_data_by_country_terra.R  process_spei_raster_data.R
scripts/: convert_daily_temp_data.py  fe_performance_test.py  make_regression_data.py  process_gcm_data_by_admin.R
src/: climate_econometrics_user_api.py
src/climate_econometrics_toolkit/: utils.py  (+29 more)
src/climate_econometrics_toolkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: interface_api_tests.py  test_regression_result.py  user_api_tests.py
(+538 files in other folders)
