[build-system]
requires = ["setuptools>=61.0","networkx>=3.3","numpy>=1.26.4","statsmodels>=0.14.2","pandas>=2.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "climate_econometrics_toolkit"
version = "0.0.1"
authors = [
  { name="Hayden Freedman", email="hfreedma@uci.edu" },
]
description = "A visual tool for building climate econometric models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]