[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "climate_econometrics_toolkit"
version = "0.0.8"
authors = [
  { name="Hayden Freedman", email="hfreedma@uci.edu" },
]
description = "An API and visual tool for building climate econometric models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "networkx>=3.3",
  "numpy>=1.26.4",
  "statsmodels>=0.14.2",
  "pandas>=2.2.2",
  "pymc>=5.10.3",
  "pyfixest>=0.24.1",
  "scikit-learn>=1.4.0",
  "scipy>=1.12.0"
]